objects/ASI_CRM_CompetitorSurvey__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Brand__c.ASI_CRM_CN_Competitor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Competitor Surveys</relationshipLabel>
        <relationshipName>ASI_CRM_Brand_CompetitorSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CategoryTODELETE__c</fullName>
        <label>CategoryTODELETE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cognac</fullName>
                </value>
                <value>
                    <fullName>Blended Whisky</fullName>
                </value>
                <value>
                    <fullName>Single Malt</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
                <value>
                    <fullName>Champagne</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>ASI_HK_CRM_Product_Category__c</referenceTo>
        <relationshipLabel>Competitor Surveys</relationshipLabel>
        <relationshipName>ASI_CRM_Category_CompetitorSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Competitor Surveys</relationshipLabel>
        <relationshipName>ASI_CRM_Customer_CompetitorSurveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PGLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_PGLeader_CompetitorSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoter</label>
        <referenceTo>ASI_CRM_Promoter__c</referenceTo>
        <relationshipLabel>Competitor Surveys</relationshipLabel>
        <relationshipName>ASI_CRM_Promoter_CompetitorSurvey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_StagingDateTime__c</fullName>
        <label>Staging DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubmitDateTime__c</fullName>
        <label>Submit DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competitor Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_VN_Competitor_Surveys</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Brand__c</columns>
        <columns>ASI_CRM_CategoryTODELETE__c</columns>
        <columns>ASI_CRM_Volume__c</columns>
        <columns>ASI_CRM_Price__c</columns>
        <columns>ASI_CRM_Promoter__c</columns>
        <columns>ASI_CRM_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CompetitorSurvey__c.ASI_CRM_VN_CompetitorSurvey</value>
        </filters>
        <label>All VN Competitor Surveys</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CS-{YY}{000000}</displayFormat>
        <label>Competitor Survey No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Surveys</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_CompetitorSurvey</fullName>
        <active>true</active>
        <label>VN Competitor Survey</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>